<resources>
    <string name="app_name">Lviv Bike Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="Search">Search</string>
    <string name="SearchHere">SerchHere</string>
    <string name="ShR">Shops and repair places</string>
    <string name="action">show/hide</string>
    <string name="NextBike">NextBike Spots</string>
    <string name="Rent">Rental Places</string>
    <string name="Parking">Parking Spots</string>
    <string name="Spring">Spring Well</string>
    <string name="hint">Search here</string>
    <string name="Settings">Settings</string>
    <string name="Summary">Markers options</string>
    <string name="Spots">Interesting places</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="Start">Enter start address</string>
    <string name="End">Enter destination address</string>
    <string name="Distance">0 km</string>
    <string name="time">0 min</string>
    <string name="CDR">Rout from point A to point B</string>
    <string name="CDC">Time that you need to route</string>
    <string name="message">Write your message</string>
    <string name="OptionPrompt">Please select an option</string>
    <string name="VariantPrompt">Please select an address</string>
    <string name="AddressH">Address</string>
    <string name="MessageH">Your Message</string>
    <string name="Send">Send</string>

    <string-array name="options">
        <item>NextBike</item>
        <item>Parking place</item>
        <item>rental spot</item>
        <item>Shop and repair station</item>
        <item>Interesting places</item>
    </string-array>

</resources>
