<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vitaliy.map.Message.SendMessage">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="8dp">

        <Spinner
            android:id="@+id/PlaceVariants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ImgM"
            android:layout_marginRight="@dimen/SpinnerD"
            android:layout_marginTop="@dimen/paddingtop"
            android:paddingBottom="@dimen/ImgM"
            tools:ignore="RtlHardcoded" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/AddressOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ImgM"
            android:layout_marginRight="@dimen/SpinnerD"
            android:layout_marginTop="@dimen/paddingtop"
            android:defaultFocusHighlightEnabled="false"
            android:hint="@string/VariantPrompt"
            android:maxLength="50"
            app:met_helperText="@string/AddressH"
            app:met_helperTextAlwaysShown="true"
            app:met_helperTextColor="@color/colorGreen"
            app:met_maxCharacters="50"
            app:met_minCharacters="10"
            app:met_validateOnFocusLost="false"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/MessageEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/ImgM"
            android:layout_marginRight="@dimen/SpinnerD"
            android:layout_marginTop="@dimen/paddingtop"
            android:gravity="start|left"
            android:hint="@string/message"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5"
            app:met_helperText="@string/MessageH"
            app:met_helperTextAlwaysShown="true"
            app:met_helperTextColor="@color/colorGreen"
            app:met_maxCharacters="255"
            app:met_minCharacters="10"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/send"
            style="@style/ForButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ImgM"
            android:layout_marginLeft="@dimen/ImgM"
            android:layout_marginRight="@dimen/SpinnerD"
            android:layout_marginTop="@dimen/ImgM"
            android:text="@string/Send"

            tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />

        <Button
            android:id="@+id/goTo"
            style="@style/ForButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingtop"
            android:layout_marginLeft="@dimen/ImgM"
            android:layout_marginRight="@dimen/SpinnerD"
            android:layout_marginTop="@dimen/ImgM"
            android:text="CheckMessages"
            tools:ignore="HardcodedText,RtlHardcoded" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
