<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vitaliy.map.Message.MessageActivity">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="544dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="9dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/options"
            android:spinnerMode="dialog"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="7dp"
            android:prompt="@string/OptionPrompt"
            tools:ignore="MissingConstraints" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/variants"
            android:spinnerMode="dialog"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:prompt="@string/VariantPrompt"
            tools:ignore="InefficientWeight,MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:focusedByDefault="false"
                android:gravity="left|start"
                android:hint="@string/message"
                android:maxLines="12"
                android:minLines="10"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/post"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:text="Send" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
